#17496: Reference proper input for docker image
Co-authored-by: Andrew Fuller <afuller@tenstorrent.com>

--- a/.github/workflows/tg-nightly-tests-impl.yaml
+++ b/.github/workflows/tg-nightly-tests-impl.yaml
@@ -14,7 +14,7 @@ jobs:
     name: ${{ matrix.test-group.name }}
     runs-on: ["arch-wormhole_b0", "config-tg", "in-service", "pipeline-functional"]
     container:
-      image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
+      image: ${{ inputs.docker-image }}
       env:
         TT_METAL_HOME: /work
         PYTHONPATH: /work
