--- a/.github/workflows/run-profiler-regression.yaml
+++ b/.github/workflows/run-profiler-regression.yaml
@@ -17,7 +17,15 @@ on:
         required: false
         type: string
         default: "ubuntu-20.04"
-      docker-image:
+      build-artifact-name:
+        required: true
+        type: string
+      wheel-artifact-name:
+        required: true
+        type: string
+  workflow_dispatch:
+    inputs:
+      arch:
         required: true
         type: choice
         options:
@@ -37,6 +45,7 @@ on:
       os:
         required: false
         type: string
+        default: "ubuntu-20.04"
       build-artifact-name:
         required: true
         type: string
