--- a/.github/workflows/tg-nightly-tests-impl.yaml
+++ b/.github/workflows/tg-nightly-tests-impl.yaml
@@ -2,6 +2,16 @@ name: "[internal] TG nightly tests impl"
 
 on:
   workflow_call:
+    inputs:
+      docker-image:
+        required: true
+        type: string
+      wheel-artifact-name:
+        required: true
+        type: string
+      build-artifact-name:
+        required: true
+        type: string
 
 jobs:
   tg-nightly-tests:
@@ -38,14 +48,14 @@ jobs:
           path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
       - uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.build-artifact.outputs.build-artifact-name }}
+          name: ${{ inputs.build-artifact-name }}
           path: /work
       - name: Extract files
         run: tar -xvf ttm_any.tar
       - name: ⬇️ Download Wheel
         uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
+          name: ${{ inputs.wheel-artifact-name }}
           path: /work
       - name: Install Wheel
         run: |
