--- a/.github/workflows/pipeline-select-galaxy.yaml
+++ b/.github/workflows/pipeline-select-galaxy.yaml
@@ -98,6 +98,10 @@ jobs:
     if: ${{ inputs.tg-model-perf }}
   tg-nightly-tests:
     needs: build-artifact
+    if: ${{ inputs.tg-nightly }}
     secrets: inherit
     uses: ./.github/workflows/tg-nightly-tests-impl.yaml
-    if: ${{ inputs.tg-nightly }}
+    with:
+      docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
+      wheel-artifact-name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
+      build-artifact-name: ${{ needs.build-artifact.outputs.build-artifact-name }}
