Changed the aliases to keep compatibility

--- a/ttnn/CMakeLists.txt
+++ b/ttnn/CMakeLists.txt
@@ -1062,7 +1062,7 @@ endif()
 
 build_library(
     "ttnncpp"                        #LIBRARY_NAME
-    "TTNN"                           #ALIAS
+    "TTNNCPP"                        #ALIAS
     ${TTNN_CPP_BUILD_TYPE}
     SOURCES
         "${SOURCES_CPP}"
@@ -1077,7 +1077,7 @@ build_library(
 if(WITH_PYTHON_BINDINGS)
     build_library(
         "ttnn"                           #LIBRARY_NAME
-        "PYBIND"                         #ALIAS
+        "TTNN"	                         #ALIAS
         SHARED
         SOURCES
             "${SOURCES_PYBIND}"
