#0: [skip ci] I never, ever, EVER EVER EVER want to see git LFS again - and I will die before I let anyone at this company re-introduce it back into Metal

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -8,6 +8,8 @@
 .github/ @tenstorrent/metalium-developers-infra
 .github/workflows/ttnn-run-sweeps.yaml @xanderchin @jdesousa-TT @sjameelTT
 
+.gitattributes @tenstorrent/metalium-developers-infra
+
 /infra/ @tenstorrent/metalium-developers-infra
 
 CONTRIBUTING.md @tenstorrent/metalium-developers-infra
