--- a/.github/workflows/tg-nightly-tests-impl.yaml
+++ b/.github/workflows/tg-nightly-tests-impl.yaml
@@ -65,7 +65,7 @@ jobs:
         shell: bash {0}
         timeout-minutes: ${{ matrix.test-group.timeout }}
         run: |
-          source ${{ github.workspace }}/tests/scripts/tg/run_tg_nightly_tests.sh
+          source tests/scripts/tg/run_tg_nightly_tests.sh
           ${{ matrix.test-group.cmd }}
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
