--- a/.github/workflows/run-profiler-regression.yaml
+++ b/.github/workflows/run-profiler-regression.yaml
@@ -12,7 +12,7 @@ on:
       timeout:
         required: false
         type: number
-        default: 140
+        default: 35
       os:
         required: false
         type: string
@@ -44,7 +44,7 @@ on:
       timeout:
         required: false
         type: number
-        default: 140
+        default: 35
       os:
         required: false
         type: string
@@ -68,8 +68,7 @@ jobs:
     runs-on:
       - ${{ inputs.runner-label }}
       - cloud-virtual-machine
-      - issue-dockerizing-pipelines
-      #- in-service
+      - in-service
     container:
       image: ${{ inputs.docker-image }}
       env:
