fix: remove duplicate hardware-specific header files from testing framework (#32)
We have some duplicate header files in `hw_specific` includes and
`tests/firmware/riscv` dirs. This PR will remove duplicates.

At the moment, LLK repo doesn't build on its own, since we're missing
several h files present in tt-metal. Idea is to dump all these
dependencies into hw_specific dir (to keep track of them), and use them
for building the code. Eventually, we want to phase this dir out by
bringing missing dependencies from tt-metal.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -35,7 +35,7 @@ OPTIONS_ALL += $(filter -mcpu=%, $(ARCH_OPTS))
 OPTIONS_COMPILE += $(filter -DARCH_%, $(ARCH_OPTS))
 
 OPTIONS_LINK=-fexceptions -Wl,-z,max-page-size=16 -Wl,-z,common-page-size=16 -nostartfiles -Wl,--trace
-INCLUDES = -I../$(ARCH_LLK_ROOT)/llk_lib -I../$(ARCH_LLK_ROOT)/common/inc -I../$(ARCH_LLK_ROOT)/common/inc/sfpu
+INCLUDES = -I../$(ARCH_LLK_ROOT)/llk_lib -I../$(ARCH_LLK_ROOT)/common/inc -I../$(ARCH_LLK_ROOT)/common/inc/sfpu -I../$(ARCH_LLK_ROOT)/hw_specific/inc
 INCLUDES += -Ifirmware/riscv/common -Ifirmware/riscv/$(CHIP_ARCH)/ -Isfpi/include -Ihelpers/include
 
 FORMAT_ARG:= -D$(format) 
