--- a/.github/workflows/zzz_smoke.yaml
+++ b/.github/workflows/zzz_smoke.yaml
@@ -60,7 +60,7 @@ jobs:
           /usr/libexec/tt-metalium/validation/tt-metalium-validation-smoke
 
       - name: Test Report
-        uses: phoenix-actions/test-reporting@v15
+        uses: phoenix-actions/test-reporting@f957cd93fc2d848d556fa0d03c57bc79127b6b5e # v15
         if: ${{ !cancelled() }}
         with:
           name: Metalium ${{ matrix.platform }} smoke tests
