Update Dockerfile to shrink release image
Currently, the Dockerfile pulls from the dev stage
of the build, which is unncessary. By adding two packages
to the runtime dependencies in install_dependencies.sh script
and pulling the release image from base, we can shrink the image
size by over 4GB.

Signed-off-by: June Knauth (tt) <jknauth@tenstorrent.com>

--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -267,7 +267,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 #############################################################
 
-FROM dev AS release
+FROM base AS release
 
 RUN mkdir -p /etc && \
     echo "[global]\nextra-index-url = https://download.pytorch.org/whl/cpu" > /etc/pip.conf
