--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/yhisaki/wandb-cpp
 [submodule "tt_metal/third_party/tt_llk"]
 	path = tt_metal/third_party/tt_llk
-	url = https://github.com/tenstorrent/tt-llk.git
+	url = https://github.com/jasondavies/tt-llk.git
