Added docker img to sd-unit in all-post-commit-workflows.yaml

--- a/.github/workflows/all-post-commit-workflows.yaml
+++ b/.github/workflows/all-post-commit-workflows.yaml
@@ -64,9 +64,9 @@ jobs:
         ]
     uses: ./.github/workflows/build-and-unit-tests.yaml
     with:
-      os: ubuntu-22.04
       arch: ${{ matrix.test-group.arch }}
       runner-label: ${{ matrix.test-group.runner-label }}
+      docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
   # Fast Dispatch Unit Tests
   fast-dispatch-unit-tests:
     needs: build-artifact
@@ -111,7 +111,6 @@ jobs:
         ]
     uses: ./.github/workflows/ttnn-post-commit.yaml
     with:
-      os: ubuntu-22.04
       arch: ${{ matrix.test-group.arch }}
       runner-label: ${{ matrix.test-group.runner-label }}
   # FD Model Tests
@@ -127,7 +126,6 @@ jobs:
         ]
     uses: ./.github/workflows/models-post-commit.yaml
     with:
-      os: ubuntu-22.04
       arch: ${{ matrix.test-group.arch }}
       runner-label: ${{ matrix.test-group.runner-label }}
   # FD C++ Unit Tests
@@ -143,7 +141,6 @@ jobs:
         ]
     uses: ./.github/workflows/cpp-post-commit.yaml
     with:
-      os: ubuntu-22.04
       arch: ${{ matrix.test-group.arch }}
       runner-label: ${{ matrix.test-group.runner-label }}
   code-analysis:
