Added docker image requirement in build-and-unit-tests.yaml

--- a/.github/workflows/build-and-unit-tests.yaml
+++ b/.github/workflows/build-and-unit-tests.yaml
@@ -9,6 +9,9 @@ on:
       runner-label:
         required: true
         type: string
+      docker-image:
+        required: true
+        type: string
       timeout:
         required: false
         type: number
@@ -34,6 +37,9 @@ on:
           - N150
           - N300
           - BH
+      docker-image:
+        required: true
+        type: string
       timeout:
         required: false
         type: number
