--- a/pytest.ini
+++ b/pytest.ini
@@ -18,4 +18,4 @@ markers =
     model_perf_tgg: mark model silicon tests for performance on tgg bare metal
     requires_fast_runtime_mode_off: mark tests which require fast runtime mode to be off: validation, logging, tracing
 filterwarnings =
-    ignore:record_property is incompatible with junit_family:PytestWarning
+    ignore:record_property is incompatible with junit_family:pytest.PytestWarning
