chore: introduce pre-commit checks (#36)
## Introduction of Pre-Commit Checks
This PR introduces several pre-commit hooks to ensure code quality and
consistency across the repository. The following checks have been added:

1. **Clang-Format:**
Description: Ensures that C/C++ code is formatted according to the style
defined in the
[.clang-format](vscode-file://vscode-app/Applications/Visual%20Studio%20Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html)
configuration file.

2. **Black:**
Description: Formats Python code to adhere to the Black code style.

3. **YAML Linter (yamllint):**
Description: Lints YAML files to ensure they follow best practices and
are correctly formatted.
Note: Only includes files in the `.github` directory.

4. Trailing Whitespace:
Description: Removes trailing whitespace from files.

5. **End-of-File Fixer:**
Description: Ensures that files end with a newline.

6. **Check Added Large Files:**
Description: Prevents large files from being added to the repository.
Configuration: Maximum file size set to 500KB.

7. **Check Merge Conflict:**
Description: Checks for unresolved merge conflicts in files.

8. **Check Executables Have Shebangs:**
Description: Ensures that executable scripts have a shebang (#!) at the
beginning.

9. **Check Docstring First:**
Description: Ensures that the first statement in Python files is a
docstring.

10. **Espressif Copyright Checker:**
Description: Checks and fixes copyright headers in files.
Note: The --replace argument is used to automatically fix errors.


These pre-commit hooks will help maintain code quality and consistency,
making the codebase cleaner and easier to manage.
In a subsequent PR, I will format the entire codebase. This will ensure
that only new code gets formatted in future commits, preventing changes
to unchanged lines.

--- a/infra/check_copyright_config.yaml
+++ b/infra/check_copyright_config.yaml
@@ -10,6 +10,9 @@ DEFAULT:
     // SPDX-FileCopyrightText: © {years} Tenstorrent AI ULC
     //
     // SPDX-License-Identifier: {license}
+  new_notice_python: | # notice for new Python files
+    # SPDX-License-Identifier: {license}
+    # SPDX-FileCopyrightText: © {years} Tenstorrent AI ULC
 
   # comment lines matching:
   # SPDX-FileCopyrightText: year[-year] Espressif Systems
@@ -21,3 +24,9 @@ DEFAULT:
     - "*.cpp"
     - "*.cc"
     - "*.h"
+    - "*.py"
+  ignore:  # You can also select ignoring files here
+    perform_check: no  # Don't check files from that block
+    include:
+      - tt_llk_blackhole/hw_speific/
+      - tt_llk_wormhole_b0/hw_specific/
