#0: Change target for the docs build

--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -22,13 +22,12 @@ jobs:
       # Do not fail-fast because we need to ensure all tests go to completion
       # so we try not to get hanging machines
       fail-fast: false
-      matrix:
-        arch: [grayskull]
     env:
-      ARCH_NAME: ${{ matrix.arch }}
       LOGURU_LEVEL: INFO
       LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
-    runs-on: ubuntu-20.04
+    runs-on:
+      - build
+      - in-service
     steps:
       - uses: actions/checkout@v4
         with:
@@ -37,12 +36,6 @@ jobs:
       - name: Set up dynamic env vars for build
         run: |
           echo "TT_METAL_HOME=$(pwd)" >> $GITHUB_ENV
-      - uses: ./.github/actions/install-metal-deps
-        with:
-          os: ubuntu-20.04
-      - uses: ./.github/actions/install-metal-dev-deps
-        with:
-          os: ubuntu-20.04
       - uses: actions/download-artifact@v4
         with:
           name: TTMetal_build_any
