dockerize the new way for cpp-post-commit

--- a/.github/workflows/cpp-post-commit-wrapper.yaml
+++ b/.github/workflows/cpp-post-commit-wrapper.yaml
@@ -11,6 +11,9 @@ jobs:
   build-artifact:
     uses: ./.github/workflows/build-artifact.yaml
     secrets: inherit
+    with:
+      tracy: true
+      build-wheel: true
   cpp-unit-tests:
     needs: build-artifact
     secrets: inherit
@@ -27,3 +30,5 @@ jobs:
       arch: ${{ matrix.test-group.arch}}
       runner-label: ${{ matrix.test-group.runner-label}}
       docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
+      build-artifact-name: ${{ needs.build-artifact.outputs.build-artifact-name }}
+      wheel-artifact-name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
