--- a/.github/workflows/cpp-post-commit.yaml
+++ b/.github/workflows/cpp-post-commit.yaml
@@ -20,6 +20,12 @@ on:
         required: false
         type: string
         default: "ubuntu-20.04"
+      build-artifact-name:
+        required: true
+        type: string
+      wheel-artifact-name:
+        required: true
+        type: string
   workflow_dispatch:
     inputs:
       arch:
@@ -48,6 +54,12 @@ on:
         required: false
         type: string
         default: "ubuntu-20.04"
+      build-artifact-name:
+        required: true
+        type: string
+      wheel-artifact-name:
+        required: true
+        type: string
 
 jobs:
   cpp-unit-tests:
@@ -77,51 +89,111 @@ jobs:
         ]
     name: ${{ matrix.test-group.name }} ${{ inputs.arch }} ${{ inputs.runner-label }}
     env:
+      TT_METAL_HOME: /work
+      PYTHONPATH: /work
+      LD_LIBRARY_PATH: /work/build/lib
       ARCH_NAME: ${{ inputs.arch }}
       LOGURU_LEVEL: INFO
+      GTEST_OUTPUT: xml:generated/test_reports/
+      DONT_USE_VIRTUAL_ENVIRONMENT: 1
+      GITHUB_ACTIONS: true
+    volumes:
+        - ${{ github.workspace }}/docker-job:/work # Subdir to workaround https://github.com/actions/runner/issues/691
+        - /dev/hugepages-1G:/dev/hugepages-1G
+        - /mnt/MLPerf:/mnt/MLPerf
+    options: "--device /dev/tenstorrent"
     runs-on:
       - ${{ inputs.runner-label }}
       - cloud-virtual-machine
       - in-service
+    defaults:
+      run:
+        shell: bash
+        working-directory: /work # https://github.com/actions/runner/issues/878
     steps:
-      - uses: tenstorrent/tt-metal/.github/actions/checkout-with-submodule-lfs@main
-      - uses: ./.github/actions/prepare-metal-run
-      - name: ${{ matrix.test-group.name }} tests
-        #GH Issue 16167
-        if: ${{ !(inputs.runner-label == 'BH' && matrix.test-group.name == 'tools') }}
-        timeout-minutes: ${{ inputs.timeout }}
-        uses: ./.github/actions/docker-run
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
         with:
-          docker_os_arch: tt-metalium/${{ inputs.os }}-amd64
-          docker_password: ${{ secrets.GITHUB_TOKEN }}
-          docker_opts: |
-            -e TT_METAL_HOME=${{ github.workspace }}
-            -e ARCH_NAME=${{ inputs.arch }}
-            -e LD_LIBRARY_PATH=${{ github.workspace }}/build/lib
-            -e GTEST_OUTPUT=xml:generated/test_reports/
-          run_args: |
-            pip install --force-reinstall pip==21.2.4
-            pip install -r tt_metal/python_env/requirements-dev.txt
-            pip install -e .
-            mkdir -p generated/test_reports
-            ${{ matrix.test-group.cmd }}
+          submodules: recursive
+          path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
+      - name: ⬇️ Download Build
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.build-artifact-name }}
+          path: docker-job
+      - name: Extract files
+        run: tar -xvf ttm_any.tar
+      - name: ⬇️ Download Wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.wheel-artifact-name }}
+          path: docker-job
+      - name: Install Wheel
+        run: |
+          WHEEL_FILENAME=$(ls -1 *.whl)
+          pip3 install $WHEEL_FILENAME
+      - name: Run cpp post commit tests
+        timeout-minutes: ${{ inputs.timeout }}
+        run: |
+          pip install --force-reinstall pip==21.2.4
+          pip install -r tt_metal/python_env/requirements-dev.txt
+          pip install -e .
+          mkdir -p generated/test_reports
+          ${{ matrix.test-group.cmd }}
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
         with:
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
           owner: U06CXU895AP # Michael Chiou
-      - uses: ./.github/actions/upload-artifact-with-job-uuid
-        if: ${{ !cancelled() }}
-        with:
-          path: |
-            generated/test_reports/
-          prefix: "test_reports_"
-      - name: Generate system logs on failure
-        uses: ./.github/actions/generate-system-logs
-        if: ${{ failure() }}
-      - name: Generate gtest annotations on failure
-        uses: ./.github/actions/generate-gtest-failure-message
-        if: ${{ failure() }}
-        with:
-          path: |
-            generated/test_reports/
+      - name: Cleanup
+        if: always()
+        run: |
+          # We are forced to checkout the repo into a subdir of the host's workdir; this pollutes the host
+          # with root-owned files.  Be sure to clean up after ourselves in case we're on a non-ephemeral runner.
+          echo "pre rm"
+          ls -al /__w/tt-metal/tt-metal
+          rm -rf /__w/tt-metal/tt-metal/docker-job
+          echo "post rm"
+          ls -al /__w/tt-metal/tt-metal
+      
+      # - uses: tenstorrent/tt-metal/.github/actions/checkout-with-submodule-lfs@main
+      # - uses: ./.github/actions/prepare-metal-run
+      # - name: ${{ matrix.test-group.name }} tests
+      #   #GH Issue 16167
+      #   if: ${{ !(inputs.runner-label == 'BH' && matrix.test-group.name == 'tools') }}
+      #   timeout-minutes: ${{ inputs.timeout }}
+      #   uses: ./.github/actions/docker-run
+      #   with:
+      #     docker_os_arch: tt-metalium/${{ inputs.os }}-amd64
+      #     docker_password: ${{ secrets.GITHUB_TOKEN }}
+      #     docker_opts: |
+      #       -e TT_METAL_HOME=${{ github.workspace }}
+      #       -e ARCH_NAME=${{ inputs.arch }}
+      #       -e LD_LIBRARY_PATH=${{ github.workspace }}/build/lib
+      #       -e GTEST_OUTPUT=xml:generated/test_reports/
+      #     run_args: |
+      #       pip install --force-reinstall pip==21.2.4
+      #       pip install -r tt_metal/python_env/requirements-dev.txt
+      #       pip install -e .
+      #       mkdir -p generated/test_reports
+      #       ${{ matrix.test-group.cmd }}
+      # - uses: ./.github/actions/slack-report
+      #   if: ${{ failure() }}
+      #   with:
+      #     slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+      #     owner: U06CXU895AP # Michael Chiou
+      # - uses: ./.github/actions/upload-artifact-with-job-uuid
+      #   if: ${{ !cancelled() }}
+      #   with:
+      #     path: |
+      #       generated/test_reports/
+      #     prefix: "test_reports_"
+      # - name: Generate system logs on failure
+      #   uses: ./.github/actions/generate-system-logs
+      #   if: ${{ failure() }}
+      # - name: Generate gtest annotations on failure
+      #   uses: ./.github/actions/generate-gtest-failure-message
+      #   if: ${{ failure() }}
+      #   with:
+      #     path: |
+      #       generated/test_reports/
