--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -26,8 +26,7 @@ jobs:
       LOGURU_LEVEL: INFO
       LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
     runs-on:
-      - build
-      - in-service
+      - ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
