--- a/.github/workflows/pr-gate.yaml
+++ b/.github/workflows/pr-gate.yaml
@@ -40,10 +40,16 @@ jobs:
     with:
       version: "22.04"
 
-  # TODO: Earmark some runners for low-latency jobs and activate Smoke tests here in PR Gate
-  #smoke-tests:
-  #  needs: pr-gate-build
-  #  uses: ./.github/workflows/zzz_smoke.yaml
-  #  with:
-  #    docker-image: ${{ needs.pr-gate-build.outputs.ci-build-docker-image }}
-  #    package-artifact-name: ${{ needs.pr-gate-build.outputs.packages-artifact-name }}
+  smoke-tests:
+    needs: pr-gate-build
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [
+          "tt-beta-ubuntu-2204-n300-large-stable",
+        ]
+    uses: ./.github/workflows/smoke.yaml
+    with:
+      docker-image: ${{ needs.pr-gate-build.outputs.ci-build-docker-image }}
+      package-artifact-name: ${{ needs.pr-gate-build.outputs.packages-artifact-name }}
+      runner: ${{ matrix.platform }}
