--- a/.github/workflows/pr-gate.yaml
+++ b/.github/workflows/pr-gate.yaml
@@ -20,6 +20,7 @@ on:
       - ready_for_review
     branches:
       - "main"
+  merge_group:
 
 concurrency:
   # Use github.run_id on main branch (or any protected branch)
